# bidi-adk-live

./: .env.template  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: main.py
app/.adk/: session.db
app/home_agent/: __init__.py  agent.py  tools.py  tools_bq.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js  audio-player.js  audio-recorder.js  pcm-player-processor.js  pcm-recorder-processor.js
docs/plans/: 2026-02-24-home-appliance-detector.md  2026-02-25-bigquery-appliance-tool.md  2026-02-25-binary-audio-transport-ui-fixes.md
scripts/: create_bq_table.sh
tests/: conftest.py  test_agent.py  test_main.py  test_tools.py  test_tools_bq.py
