[project]
name = "bidi-adk-live"
version = "0.1.0"
description = "Real-time home appliance detector using ADK bidi-streaming with Vertex AI Live API"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "google-adk>=1.20.0",
    "fastapi>=0.115.0",
    "google-cloud-bigquery>=3.20.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
ignore = ["C901", "PLR0915"]

[tool.ruff.lint.isort]
known-first-party = ["app", "home_agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
